--- a/public/css/customStyle.css
+++ b/public/css/customStyle.css
@@ -16770,6 +16770,7 @@ a.button {
   font-weight: 600;
   border: none;
   right: 0;
+  position: absolute;
   top: 0;
   width: 100%;
   display: flex;
