--- a/public/css/customStyle.css
+++ b/public/css/customStyle.css
@@ -3228,10 +3228,24 @@ section.portfolio {
 .portfolio .homes-tag.featured {
   left: 10px;
   text-align: center;
-  width: 70px !important;
+  width: auto !important;
   margin-top: 10px;
 }
-
+.news-item-sm .news-item-text {
+  -ms-flex-preferred-size: 66.6%;
+  flex-basis: 66.6%;
+  padding: 25px 30px;
+}
+.news-item-sm .news-item-text {
+  padding: 20px !important;
+}
+.news-item {
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 1px #e7e7e7 !important;
+  box-shadow: 0px 0px 1px #e7e7e7 !important;
+  border: 1px solid #e7e7e7;
+  overflow: hidden;
+}
 .portfolio .homes-price,
 .portfolio .homes-tag {
   position: absolute;
