--- a/public/css/customStyle.css
+++ b/public/css/customStyle.css
@@ -3245,7 +3245,7 @@ section.portfolio {
 .news-item {
   background: #fff;
   -webkit-box-shadow: 0px 0px 1px #e7e7e7 !important;
-  box-shadow: 0px 0px 1px #e7e7e7 !important;
+  box-shadow: 0px 0px 7px #ebebeb !important;
   border: 1px solid #e7e7e7;
   overflow: hidden;
 }
