--- a/public/css/customStyleNew.css
+++ b/public/css/customStyleNew.css
@@ -756,6 +756,10 @@ img {
   margin-left: -48px;
 }
 
+button {
+  border-radius: 5px !important
+}
+
 .header-top .dropdown button {
   background: transparent none repeat scroll 0 0;
   border: medium none;
@@ -11044,9 +11048,9 @@ a.int_btn,
   bottom: 0;
   left: 0;
   padding: 0 !important;
-  height: 50px;
-  width: 70%;
-  border-radius:0 20px 0 0;
+  height: 40px;
+  width: 100%;
+  border-radius: 0 20px 0 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 25px 30px;
