--- a/public/css/customStyleNew.css
+++ b/public/css/customStyleNew.css
@@ -9012,6 +9012,7 @@ a.button {
   border: none;
   margin-bottom: 0 !important;
   width: 100%;
+  border-radius: 5px !important;
   font-size: 11px;
   background-color: transparent !important;
   padding: 10px 30px;
