--- a/public/adminassets/wysiwyg/css/froala_editor.pkgd.css
+++ b/public/adminassets/wysiwyg/css/froala_editor.pkgd.css
@@ -3765,7 +3765,7 @@ div.fr-modal-body {
   top: -.5em; }
 
 .footnote-a {
-  color: #007bff;
+  color: #2f5f9e;
   text-decoration: none;
   background-color: transparent; }
 
