--- a/public/adminassets/wysiwyg/css/plugins/markdown.css
+++ b/public/adminassets/wysiwyg/css/plugins/markdown.css
@@ -98,7 +98,7 @@
   top: -.5em; }
 
 .footnote-a {
-  color: #007bff;
+  color: #2f5f9e;
   text-decoration: none;
   background-color: transparent; }
 
