--- a/public/css/customStyleNew.css
+++ b/public/css/customStyleNew.css
@@ -31467,7 +31467,7 @@ li::after {
 }
 
 .custom-modal-button {
-  background-color: #007bff;
+  background-color: #2f5f9e;
   color: #fff;
   border: none;
   border-radius: 4px;
