--- a/public/css/panel.css
+++ b/public/css/panel.css
@@ -1341,7 +1341,7 @@
     align-items: center;
     height: 25px;
     width: 100px;
-    background: #007bff;
+    background: #2f5f9e;
     color: #fff;
     padding: 0 15px;
     left: 100px;
