--- a/resources/js/Components/create_project_components/TopCreateProjectNavigator.css
+++ b/resources/js/Components/create_project_components/TopCreateProjectNavigator.css
@@ -1336,7 +1336,7 @@ input:checked + .slider:before {
   align-items: center;
   height: 25px;
   width: 100px;
-  background: #007bff;
+  background: #2f5f9e;
   color: #fff;
   padding: 0 15px;
   left: 100px;
