--- a/public/css/customStyleNew.css
+++ b/public/css/customStyleNew.css
@@ -21908,8 +21908,8 @@ small {
 
 .btn-primary {
   color: #fff;
-  background-color: #2f5f9e;
-  border-color: #2f5f9e;
+  background-color: #2f5f9e !important;
+  border-color: #2f5f9e !important;
 }
 
 .tr-single-box {
