--- a/public/adminassets/wysiwyg/css/plugins/file.css
+++ b/public/adminassets/wysiwyg/css/plugins/file.css
@@ -33,9 +33,9 @@
   box-sizing: border-box;
   text-align: center; }
   .fr-popup .fr-file-upload-layer:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
   .fr-popup .fr-file-upload-layer.fr-drop {
-    background: #ebebeb;
+    background: #f3f3f3;
     border-color: #0098f7; }
   .fr-popup .fr-file-upload-layer .fr-form {
     -webkit-opacity: 0;
