--- a/public/adminassets/wysiwyg/css/plugins/help.css
+++ b/public/adminassets/wysiwyg/css/plugins/help.css
@@ -37,7 +37,7 @@
     .fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table th, .fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table td {
       padding: 6px 0 4px; }
     .fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table tbody tr {
-      border-bottom: solid 1px #ebebeb; }
+      border-bottom: solid 1px #f3f3f3; }
     .fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table tbody td:first-child {
       width: 60%;
       color: #646464; }
