--- a/public/adminassets/wysiwyg/css/plugins/image.css
+++ b/public/adminassets/wysiwyg/css/plugins/image.css
@@ -113,9 +113,9 @@
   line-height: 140%;
   text-align: center; }
   .fr-popup .fr-image-upload-layer:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
   .fr-popup .fr-image-upload-layer.fr-drop {
-    background: #ebebeb;
+    background: #f3f3f3;
     border-color: #0098f7; }
   .fr-popup .fr-image-upload-layer .fr-form {
     -webkit-opacity: 0;
