--- a/public/adminassets/wysiwyg/css/plugins/trim_video.css
+++ b/public/adminassets/wysiwyg/css/plugins/trim_video.css
@@ -63,7 +63,7 @@
   background-color: #eff5fa;
   outline: none; }
   .fr-trim-button:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
 
 /* Safari */
 @-webkit-keyframes spin {
