--- a/public/css/maps.css
+++ b/public/css/maps.css
@@ -2672,7 +2672,7 @@ section.feature-categories {
 .homepage-9 .small-category-2 {
     background: #fff;
     border-radius: 3px;
-    border: 1px solid #ebebeb;
+    border: 1px solid #f3f3f3;
     overflow: hidden;
     margin-bottom: 30px;
     padding: 0px;
