--- a/public/css/new.css
+++ b/public/css/new.css
@@ -1349,7 +1349,7 @@ table th{
 }
 
 .invoice-5 .border-bottom {
-    border-bottom: solid 1px #dee2e6 !important;
+    border-bottom: solid 1px #f3f3f3 !important;
 }
 
 .invoice-5 .invoice-info {
@@ -2146,7 +2146,7 @@ table th{
 }
 
 .invoice-8 .border-bottom {
-    border-bottom: solid 1px #dee2e6 !important;
+    border-bottom: solid 1px #f3f3f3 !important;
 }
 
 .invoice-8 .invoice-info {
@@ -3891,7 +3891,7 @@ table th{
 }
 
 .invoice-15 .border-bottom {
-    border-bottom: solid 1px #dee2e6 !important;
+    border-bottom: solid 1px #f3f3f3 !important;
 }
 
 .invoice-15 .invo-addr-1 {
