--- a/public/css/project.css
+++ b/public/css/project.css
@@ -154,7 +154,7 @@
     display: flex;
     justify-content: space-between;
      font-size: 11px;
-    border: 1px solid #dee2e6;
+    border: 1px solid #f3f3f3;
 }
 
 .table td {
