--- a/public/adminassets/wysiwyg/css/froala_editor.css
+++ b/public/adminassets/wysiwyg/css/froala_editor.css
@@ -115,7 +115,7 @@
   .fr-box a.fr-floating-btn.fr-btn + .fr-btn {
     margin-left: 10px; }
   .fr-box a.fr-floating-btn:hover {
-    background: #ebebeb;
+    background: #f3f3f3;
     cursor: pointer; }
     .fr-box a.fr-floating-btn:hover svg {
       fill: #333333; }
@@ -377,7 +377,7 @@ iframe.fr-iframe {
     -ms-transition: 0.5s ease;
     -o-transition: 0.5s ease; }
     .fr-toolbar .fr-command.fr-btn.fr-dropdown.fr-active:hover, .fr-popup .fr-command.fr-btn.fr-dropdown.fr-active:hover, .fr-modal .fr-command.fr-btn.fr-dropdown.fr-active:hover {
-      background: #ebebeb;
+      background: #f3f3f3;
       fill: #333333; }
       .fr-toolbar .fr-command.fr-btn.fr-dropdown.fr-active:hover::after, .fr-popup .fr-command.fr-btn.fr-dropdown.fr-active:hover::after, .fr-modal .fr-command.fr-btn.fr-dropdown.fr-active:hover::after {
         border-top-color: #333333; }
@@ -454,14 +454,14 @@ iframe.fr-iframe {
   outline: 0;
   color: #333333; }
   .fr-desktop .fr-command:hover:not(.fr-table-cell), .fr-desktop .fr-command:focus:not(.fr-table-cell), .fr-desktop .fr-command.fr-btn-hover:not(.fr-table-cell), .fr-desktop .fr-command.fr-expanded:not(.fr-table-cell) {
-    background: #ebebeb; }
+    background: #f3f3f3; }
   .fr-desktop .fr-command:hover::after, .fr-desktop .fr-command:focus::after, .fr-desktop .fr-command.fr-btn-hover::after, .fr-desktop .fr-command.fr-expanded::after {
     border-top-color: #333333; }
 .fr-desktop .fr-command.fr-selected:not(.fr-table-cell), .fr-desktop .fr-command:active {
   color: #333333;
   background: #d6d6d6; }
 .fr-desktop .fr-command.fr-active:hover, .fr-desktop .fr-command.fr-active:focus, .fr-desktop .fr-command.fr-active.fr-btn-hover, .fr-desktop .fr-command.fr-active.fr-expanded {
-  background: #ebebeb; }
+  background: #f3f3f3; }
 .fr-desktop .fr-command.fr-active:active {
   background: #d6d6d6; }
 .fr-desktop .fr-command.fr-disabled:hover, .fr-desktop .fr-command.fr-disabled:focus, .fr-desktop .fr-command.fr-disabled.fr-selected {
@@ -705,7 +705,7 @@ body.fr-prevent-scroll {
         .fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command + button {
           margin-left: 24px; }
         .fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command:hover, .fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command:focus {
-          background: #ebebeb;
+          background: #f3f3f3;
           color: #0098f7; }
         .fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command:active {
           background: #d6d6d6;
@@ -714,7 +714,7 @@ body.fr-prevent-scroll {
         border: 0; }
 
 .fr-desktop .fr-modal-wrapper .fr-modal-head i:hover {
-  background: #ebebeb; }
+  background: #f3f3f3; }
 
 .fr-overlay {
   position: fixed;
@@ -965,7 +965,7 @@ ol.decimal_type > li:before {
       .fr-popup .fr-action-buttons button.fr-command + button {
         margin-left: 24px; }
       .fr-popup .fr-action-buttons button.fr-command:hover, .fr-popup .fr-action-buttons button.fr-command:focus {
-        background: #ebebeb;
+        background: #f3f3f3;
         color: #0098f7; }
       .fr-popup .fr-action-buttons button.fr-command:active {
         background: #d6d6d6;
@@ -1234,7 +1234,7 @@ ol.decimal_type > li:before {
     background-clip: padding-box; }
 
 .fr-separator {
-  background: #ebebeb;
+  background: #f3f3f3;
   display: block;
   vertical-align: top;
   float: left; }
