--- a/public/adminassets/wysiwyg/css/plugins/code_view.css
+++ b/public/adminassets/wysiwyg/css/plugins/code_view.css
@@ -94,4 +94,4 @@ textarea.fr-code {
     width: 24px;
     text-align: center; }
   .fr-box.fr-inline .fr-command.fr-btn.html-switch.fr-desktop:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
