--- a/public/adminassets/wysiwyg/css/themes/royal.css
+++ b/public/adminassets/wysiwyg/css/themes/royal.css
@@ -94,7 +94,7 @@
     font-size: 11px;
     line-height: 40px; }
   .royal-theme.fr-box a.fr-floating-btn:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
     .royal-theme.fr-box a.fr-floating-btn:hover svg {
       fill: #333333; }
 .royal-theme.fr-box .fr-visible a.fr-floating-btn {
@@ -234,7 +234,7 @@
     font-size: 24px;
     width: 24px; }
   .royal-theme.fr-box.fr-inline .fr-command.fr-btn.html-switch.fr-desktop:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
 .royal-theme.fr-popup .fr-layer.fr-color-hex-layer {
   margin: 0;
   padding: 20px;
@@ -321,9 +321,9 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
   .royal-theme.fr-popup .fr-file-upload-layer:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
   .royal-theme.fr-popup .fr-file-upload-layer.fr-drop {
-    background: #ebebeb;
+    background: #f3f3f3;
     border-color: #0098f7; }
   .royal-theme.fr-popup .fr-file-upload-layer .fr-form {
     -webkit-opacity: 0;
@@ -431,9 +431,9 @@
   border: dashed 2px #bdbdbd;
   margin: 20px; }
   .royal-theme.fr-popup .fr-files-upload-layer:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
   .royal-theme.fr-popup .fr-files-upload-layer.fr-drop {
-    background: #ebebeb;
+    background: #f3f3f3;
     border-color: #0098f7; }
   .royal-theme.fr-popup .fr-files-upload-layer .fr-form {
     -webkit-opacity: 0;
@@ -631,7 +631,7 @@
 .royal-theme.fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table tr {
   border: 0; }
 .royal-theme.fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table tbody tr {
-  border-bottom: solid 1px #ebebeb; }
+  border-bottom: solid 1px #f3f3f3; }
 .royal-theme.fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal table tbody td:first-child {
   color: #646464; }
 .royal-theme .fr-element img {
@@ -701,9 +701,9 @@
   padding: 25px 0;
   margin: 20px; }
   .royal-theme.fr-popup .fr-image-upload-layer:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
   .royal-theme.fr-popup .fr-image-upload-layer.fr-drop {
-    background: #ebebeb;
+    background: #f3f3f3;
     border-color: #0098f7; }
   .royal-theme.fr-popup .fr-image-upload-layer .fr-form {
     -webkit-opacity: 0;
@@ -770,18 +770,18 @@
     -o-transition: opacity 0.2s ease 0s, background 0.2s ease 0s;
     background-color: #f5f5f5; }
     .royal-theme.fr-modal .fr-modal-head .fr-modal-tags a:focus {
-      background-color: #ebebeb; }
+      background-color: #f3f3f3; }
     .royal-theme.fr-modal .fr-modal-head .fr-modal-tags a:hover {
-      background-color: #ebebeb; }
+      background-color: #f3f3f3; }
     .royal-theme.fr-modal .fr-modal-head .fr-modal-tags a:active {
       background-color: #d6d6d6; }
     .royal-theme.fr-modal .fr-modal-head .fr-modal-tags a.fr-selected-tag {
       background-color: #EcF5Ff;
       color: #0098f7; }
       .royal-theme.fr-modal .fr-modal-head .fr-modal-tags a.fr-selected-tag:focus {
-        background-color: #ebebeb; }
+        background-color: #f3f3f3; }
       .royal-theme.fr-modal .fr-modal-head .fr-modal-tags a.fr-selected-tag:hover {
-        background-color: #ebebeb; }
+        background-color: #f3f3f3; }
       .royal-theme.fr-modal .fr-modal-head .fr-modal-tags a.fr-selected-tag:active {
         background-color: #d6d6d6; }
 .royal-theme.fr-show-tags .fr-modal-more svg path {
@@ -894,7 +894,7 @@
   background: #bf4644;
   color: #FFF; }
 .royal-theme.fr-desktop .fr-modal-wrapper div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img:hover {
-  background: #ebebeb; }
+  background: #f3f3f3; }
 .royal-theme .fr-line-breaker {
   border-top: 1px solid #0098f7; }
   .royal-theme .fr-line-breaker a.fr-floating-btn {
@@ -1107,9 +1107,9 @@
   padding: 25px 0;
   margin: 20px; }
   .royal-theme.fr-popup .fr-video-upload-layer:hover {
-    background: #ebebeb; }
+    background: #f3f3f3; }
   .royal-theme.fr-popup .fr-video-upload-layer.fr-drop {
-    background: #ebebeb;
+    background: #f3f3f3;
     border-color: #0098f7; }
   .royal-theme.fr-popup .fr-video-upload-layer .fr-form {
     -webkit-opacity: 0;
@@ -1370,11 +1370,11 @@
 .royal-theme .sc-cm-holder > .sc-cm {
   border-top: 5px solid #222222 !important; }
 .royal-theme .sc-cm__item_dropdown:hover > a, .royal-theme .sc-cm a:hover {
-  background-color: #ebebeb !important; }
+  background-color: #f3f3f3 !important; }
 .royal-theme .sc-cm__item_active > a, .royal-theme .sc-cm__item_active > a:hover, .royal-theme .sc-cm a:active, .royal-theme .sc-cm a:focus {
   background-color: #d6d6d6 !important; }
 .royal-theme .sc-cm-holder > .sc-cm:before {
-  background-color: #ebebeb !important; }
+  background-color: #f3f3f3 !important; }
 .royal-theme .fr-tooltip {
   top: 0;
   left: 0;
@@ -1508,7 +1508,7 @@
     -ms-transition: 0.5s ease;
     -o-transition: 0.5s ease; }
     .royal-theme.fr-toolbar .fr-command.fr-btn.fr-dropdown.fr-active:hover, .royal-theme.fr-popup .fr-command.fr-btn.fr-dropdown.fr-active:hover, .royal-theme.fr-modal .fr-command.fr-btn.fr-dropdown.fr-active:hover {
-      background: #ebebeb;
+      background: #f3f3f3;
       fill: #333333; }
       .royal-theme.fr-toolbar .fr-command.fr-btn.fr-dropdown.fr-active:hover::after, .royal-theme.fr-popup .fr-command.fr-btn.fr-dropdown.fr-active:hover::after, .royal-theme.fr-modal .fr-command.fr-btn.fr-dropdown.fr-active:hover::after {
         border-top-color: #333333; }
@@ -1573,14 +1573,14 @@
   outline: 0;
   color: #333333; }
   .royal-theme.fr-desktop .fr-command:hover:not(.fr-table-cell), .royal-theme.fr-desktop .fr-command:focus:not(.fr-table-cell), .royal-theme.fr-desktop .fr-command.fr-btn-hover:not(.fr-table-cell), .royal-theme.fr-desktop .fr-command.fr-expanded:not(.fr-table-cell) {
-    background: #ebebeb; }
+    background: #f3f3f3; }
   .royal-theme.fr-desktop .fr-command:hover::after, .royal-theme.fr-desktop .fr-command:focus::after, .royal-theme.fr-desktop .fr-command.fr-btn-hover::after, .royal-theme.fr-desktop .fr-command.fr-expanded::after {
     border-top-color: #333333; }
 .royal-theme.fr-desktop .fr-command.fr-selected:not(.fr-table-cell), .royal-theme.fr-desktop .fr-command:active {
   color: #333333;
   background: #d6d6d6; }
 .royal-theme.fr-desktop .fr-command.fr-active:hover, .royal-theme.fr-desktop .fr-command.fr-active:focus, .royal-theme.fr-desktop .fr-command.fr-active.fr-btn-hover, .royal-theme.fr-desktop .fr-command.fr-active.fr-expanded {
-  background: #ebebeb; }
+  background: #f3f3f3; }
 .royal-theme.fr-desktop .fr-command.fr-active:active {
   background: #d6d6d6; }
 .royal-theme.fr-toolbar.fr-mobile .fr-command.fr-blink, .royal-theme.fr-popup.fr-mobile .fr-command.fr-blink {
@@ -1747,7 +1747,7 @@
         -webkit-background-clip: padding-box;
         background-clip: padding-box; }
         .royal-theme.fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command:hover, .royal-theme.fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command:focus {
-          background: #ebebeb;
+          background: #f3f3f3;
           color: #0098f7; }
         .royal-theme.fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command:active {
           background: #d6d6d6;
@@ -1755,7 +1755,7 @@
       .royal-theme.fr-modal .fr-modal-wrapper div.fr-modal-body button::-moz-focus-inner {
         border: 0; }
 .royal-theme.fr-desktop .fr-modal-wrapper .fr-modal-head i:hover {
-  background: #ebebeb; }
+  background: #f3f3f3; }
 .royal-theme.fr-overlay {
   top: 0;
   bottom: 0;
@@ -1925,7 +1925,7 @@
       -webkit-background-clip: padding-box;
       background-clip: padding-box; }
       .royal-theme.fr-popup .fr-action-buttons button.fr-command:hover, .royal-theme.fr-popup .fr-action-buttons button.fr-command:focus {
-        background: #ebebeb;
+        background: #f3f3f3;
         color: #0098f7; }
       .royal-theme.fr-popup .fr-action-buttons button.fr-command:active {
         background: #d6d6d6;
@@ -2135,7 +2135,7 @@
     -webkit-background-clip: padding-box;
     background-clip: padding-box; }
 .royal-theme .fr-separator {
-  background: #ebebeb; }
+  background: #f3f3f3; }
   .royal-theme .fr-separator.fr-vs {
     height: 32px;
     width: 1px;
