--- a/public/css/account.css
+++ b/public/css/account.css
@@ -1241,7 +1241,7 @@ figure {
     left: 0;
     width: 100%;
     height: 2px;
-    background-color: #ebebeb;
+    background-color: #f3f3f3;
     z-index: -1;
 }
 
@@ -14950,7 +14950,7 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
     align-items: center;
     margin-right: 10px;
     margin-bottom: 10px;
-    background-color: #ebebeb;
+    background-color: #f3f3f3;
     width: 50px;
     height: 50px;
     font-weight: 600;
