--- a/public/css/project-housing.css
+++ b/public/css/project-housing.css
@@ -108,7 +108,7 @@
     font-size: 11px;
     display: flex;
     justify-content: space-between;
-    border: 1px solid #dee2e6;
+    border: 1px solid #f3f3f3;
 }
 
 .mobileTagProject {
@@ -391,7 +391,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 11px;
-    border: 1px solid #dee2e6;
+    border: 1px solid #f3f3f3;
 }
 
 .table td {
