--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -22044,7 +22044,7 @@ header.payment-card-header .pull-right img {
 }
 
 .inner-pages .payment-method .form-control {
-  border: 1px solid #666;
+  border: 1px solid #ebebeb;
   margin-bottom: 1.3rem;
 }
 
