--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -16791,7 +16791,7 @@ a.button {
 
 .homes-button .second-btn {
   bottom: 0;
-  border-radius: 0 !important;
+  border-radius: 5px !important;
   right: 0;
   font-size: 11px;
   padding: 15px;
