--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -205,8 +205,6 @@ button {
   height: 100%;
   overflow: hidden;
   outline: 0;
-  padding-right: 0 !important;
-  padding-bottom: 150px !important;
 }
 
 .bank-account.selected {
@@ -712,7 +710,9 @@ img {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  height: 80%;
+  padding: 0;
+  margin: 0;
 }
 
 @media (max-width: 768px) {
@@ -21290,7 +21290,8 @@ body.dashboard-bd {
 }
 
 .my-properties {
-  padding: 0 !important
+  padding: 0 !important;
+  height: 80vh !important; 
 }
 
 .my-properties table thead tr th {
