--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -18716,7 +18716,7 @@ div.datedropper.my-style.picker-lkd .pick-submit {
   width: 20%;
 }
 
-.modal-open .modal {
+.modal.show {
   z-index: 9999999;
 }
 
