--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -710,15 +710,26 @@ img {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 80%;
+  height: 100%;
   padding: 0;
   margin: 0;
+  max-width: 100%;
+}
+
+.modal-content{
+  height: 80vh;
+    width: 50%;
 }
 
 @media (max-width: 768px) {
   .brand-head .navbar-items {
     overflow-x: scroll;
   }
+  .modal-content{
+    height: 100vh;
+      width: 100%;
+  }
+  
 
   .brand-head .navbar-items::-webkit-scrollbar {
     display: none;
