--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -836,7 +836,11 @@ button {
     background: rgba(255, 255, 255, 0.06);
     padding-bottom: 0px;
   }
+  .modal-content{
+    width: 100%;
+    height: 100%
 
+  }
   .header.head-tr #main-menu {
     background: #fff;
     width: 100%;
