--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -831,10 +831,19 @@ button {
   z-index: 99999;
 }
 
-.modal-body{
+.modal-body {
   overflow-y: auto !important;
-    overflow-x: hidden !important;
+  overflow-x: hidden !important;
 
+}
+
+.modal-body form {
+  width: 100%;
+  height: 100%;
+
+}
+.modal-content .pop-up-top-gradient {
+  border-radius: 10px 10px 0 0;
 }
 
 @media screen and (max-width: 991px) {
@@ -842,11 +851,12 @@ button {
     background: rgba(255, 255, 255, 0.06);
     padding-bottom: 0px;
   }
-  .modal-content{
+
+  .modal-content {
     width: 100%;
     height: 100%
-
   }
+
   .header.head-tr #main-menu {
     background: #fff;
     width: 100%;
