--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -11083,8 +11083,9 @@ a.int_btn,
   border-radius: 10px
 }
 
-.project-filter-reverse.row{
-  width: 100%
+.project-filter-reverse.row,
+.project-card .row{
+  width: 100% !important
 }
 
 .listing-img-content {
