--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -11084,7 +11084,7 @@ a.int_btn,
   border-radius: 10px
 }
 
-.homes-content .row {
+.project-filter-reverse .project-card .homes-content .row {
   width: 100% !important;
 }
 
