--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -30646,7 +30646,7 @@ a {
 .buyUserRequest .buyUserRequest__icon {
   position: absolute;
   transform: translateX(109px);
-  height: 100%;
+  height: 35px;
   width: 39px;
   background-color: black;
   display: flex;
