--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -686,6 +686,7 @@ img {
 .brand-head .card-body {
   border: solid 1px #e6e6e6;
   padding: 0;
+  border-radius: 0 0 10px 10px
 }
 
 .brand-head .navbar {
@@ -3494,6 +3495,81 @@ section.portfolio {
   position: relative;
   text-align: center;
   border-radius: 10px 10px 0 0;
+}
+.me-10px {
+  margin-right: 10px !important;
+}
+.border-radius-100px {
+  border-radius: 100px !important;
+}
+.fw-600 {
+  font-weight: 600 !important;
+}
+.p-20px {
+  padding: 20px !important;
+}
+.border-color-transparent-dark-very-light {
+  border-color: rgba(35, 35, 35, .1) !important;
+}
+.border-end {
+  border-right: 1px solid #dee2e6 !important;
+  border: 1px solid #dee2e6;
+  border-radius: 30px 0 0 30px;
+
+}
+.border-send {
+  border: 1px solid #dee2e6;
+  border-radius: 0 30px 30px 0;
+
+}
+.ls-minus-05px {
+  letter-spacing: -.5px !important;
+}
+.mb-15px {
+  margin-bottom: 15px !important;
+}
+.pb-15px {
+  padding-bottom: 15px !important;
+}
+.w-90 {
+  width: 90% !important;
+}
+.border-color-dark-gray {
+  border-color: #353642 !important;
+}
+.icon-small {
+  font-size: 18px;
+}
+.opacity-3 {
+  opacity: .3;
+}
+.ls-minus-1px {
+  letter-spacing: -1px !important;
+}
+.bottom-10px {
+  bottom: 10px;
+}
+.h-10px {
+  height: 10px !important;
+}
+
+.text-highlight {
+  position: relative;
+  z-index: 1;
+}
+.text-highlight span {
+  display: inline-block;
+  left: -3px;
+  position: absolute;
+  z-index: -1;
+  width: calc(100% + 6px);
+}
+.border-radius-100px {
+  border-radius: 100px !important;
+}
+
+.bg-base-color, .header-cart-icon .cart-count {
+  background-color: #30bd9b;
 }
 
 .portfolio .project-head:before {
@@ -26073,7 +26149,7 @@ ul {
 }
 
 .button-tabs .tab-title {
-  padding: 6px;
+  padding: 10px;
   display: inline-block;
   text-align: center;
   width: auto;
