--- a/public/css/stylesNew.css
+++ b/public/css/stylesNew.css
@@ -16766,6 +16766,7 @@ a.button {
   border-bottom: 0px;
   width: 100%;
   border: 1px solid #e7e7e7;
+  border-radius: 10px
 }
 
 .inner-pages .properties-right.list .my-44 {
